--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css">
     <title>Accueil Ohmyfood !</title>
   </head>
 
@@ -34,8 +35,8 @@
       <h2 class="next__heading">Prochainement</h2>
     </section>
     <footer class="footer">
-      <button class="footer__btn">Mentions légales</button>
-      <button class="footer__btn">Contactez-nous</button>
+      <a href="mentions_legales.html" class="footer__btn footer__btn--mentions">Mentions légales</a>
+      <a href="mailto:ohmyfood@contact.com" class="footer__btn footer__btn--contact">Contactez-nous</a>
     </footer>
   </body>
 </html>
