Création page Note

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     </header>
 
     <div class="grid">
-      <a href="./note.html" class="menu menu--1">
-        <i class="menu__image"></i>
-        <h2 class="menu__heading">La note enchantée</h2>
+      <a href="./note.html" class="card card--1">
+        <i></i>
+        <div>La note enchantée</div>
         <p>MENU</p>
       </a>
-      <a href="./chic.html" class="menu menu--2">
-        <h2 class="menu__heading">Le chic à la Française</h2>
+      <a href="./chic.html" class="card card--2">
+        <div>Le chic à la Française</div>
         <p>Menu</p>
       </a>
-      <a href="./delice.html" class="menu menu--3">
-        <h2 class="menu__heading">Le délice des papilles</h2>
+      <a href="./delice.html" class="card card--3">
+        <div>Le délice des papilles</div>
         <p>Menu</p>
       </a>
-      <a href="./palette.html" class="menu menu--4">
-        <h2 class="menu__heading">La palette du goût</h2>
+      <a href="./palette.html" class="card card--4">
+        <div>La palette du goût</div>
         <p>Menu</p>
       </a>
     </div>
