--- a/note.html
+++ b/note.html
@@ -3,7 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css">
     <title>La note enchantée</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="header__heading">ohmyfood</h1>
+    </header>
+    <section class="page">
+      <h2 class="page__heading">La note enchantée</h2>
+      <article class="menu menu--1">
+        <i></i>
+        <h3 class="menu__heading">La note enchantée</h3>
+        <label for="Entrées">Prélude</label>
+        <div class="menu__text">
+          <p>Ravioles de foie gras accompagnés de leur crème à la truffe<span class="price">98€</span></p>
+          <p>Caviar osciètre sur blini à la farine de blé noir<span class="price">115€</span></p>
+          <p>Homard et espuma de potiron mariné aux zests d'orange<span class="price">89€</span></p>
+          <p>Foie gras de canard cuit entier, confiture de figue et pain toasté<span class="price">105€</span></p>
+        </div>
+        <label for="Plats">Point d'orgue</label>
+        <div class="menu__text">
+          <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave<span class="price">102€</span></p>
+          <p>Languoustine poêlée, purée de patate douce<span class="price">205€</span></p>
+          <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron<span class="price">169€</span></p>
+        </div>
+        <label for="Desserts">Mouvement final</label>
+        <div class="menu__text">
+          <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+          <p>Baba au rhum revisité avec son coulis de citron</p>
+          <p>Tarte au citron meringuée destructurée</p>
+        </div>
+      </article>
+    </section> 
+    <footer class="footer">
+      <a href="mentions_legales.html" class="footer__btn footer__btn--mentions">Mentions légales</a>
+      <a href="mailto:ohmyfood@contact.com" class="footer__btn footer__btn--contact">Contactez-nous</a>
+    </footer>
+  </body>
 </html>
