--- a/chic.html
+++ b/chic.html
@@ -3,8 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Courgette&family=Dancing+Script:wght@500&family=Devonshire&family=Montez&family=Montserrat:wght@500;800&family=Overlock:wght@400;700&family=Short+Stack&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>Le chic à la Française</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="header__heading">ohmyfood</h1>
+    </header>
+    <main class="page">
+      <h2 class="page__heading">Le chic à la française</h2>
+      <article class="menu menu--2">
+        <h3 class="menu__heading">Le chic à la française</h3>
+        <label for="Entrées">Pour se mettre en appétit</label>
+        <div class="menu__text">
+          <p>Tartare de poulpe acidulé aux zests d'orange<span class="price">79€</span></p>
+          <p>Velouté de légumes d'antan<span class="price">57€</span></p>
+          <p>Soupe à l'oignon revisitée<span class="price">57€</span></p>
+        </div>
+        <label for="Plats">Plaisir des papilles</label>
+        <div class="menu__text">
+          <p>Coquille Saint-Jacques accompagnées d'une purée de panais<span class="price">95€</span></p>
+          <p>Magret de canard et parmentier de pommes de terres<span class="price">88€</span></p>
+          <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes<span class="price">175€</span></p>
+        </div>
+        <label for="Desserts">Gourmandises sucrées</label>
+        <div class="menu__text">
+          <p>Pétales de violettes glacés et purée de noisettes</p>
+          <p>Fondant au chocolat revisité</p>
+          <p>Millefeuille croustillant</p>
+        </div>
+      </article>
+    </main> 
+    <footer class="footer">
+      <a href="mentions_legales.html" class="footer__btn footer__btn--mentions">Mentions légales</a>
+      <a href="mailto:ohmyfood@contact.com" class="footer__btn footer__btn--contact">Contactez-nous</a>
+    </footer>
+  </body>
 </html>
