--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Courgette&family=Dancing+Script:wght@500&family=Devonshire&family=Montez&family=Montserrat:wght@500;800&family=Overlock:wght@400;700&family=Short+Stack&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>Accueil Ohmyfood !</title>
   </head>
@@ -12,7 +13,7 @@
       <h1 class="header__heading">ohmyfood</h1>
     </header>
 
-    <div class="grid">
+    <nav class="grid">
       <a href="./note.html" class="card card--1">
         <i></i>
         <div>La note enchantée</div>
@@ -30,9 +31,13 @@
         <div>La palette du goût</div>
         <p>Menu</p>
       </a>
-    </div>
+    </nav>
     <section class="next">
-      <h2 class="next__heading">Prochainement</h2>
+      <h2 class="next__heading">Prochainement
+        <div class="next__dot next__dot--1">.</div>
+        <div class="next__dot next__dot--2">.</div>
+        <div class="next__dot next__dot--3">.</div>
+      </h2>
     </section>
     <footer class="footer">
       <a href="mentions_legales.html" class="footer__btn footer__btn--mentions">Mentions légales</a>
