--- a/palette.html
+++ b/palette.html
@@ -3,8 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Courgette&family=Dancing+Script:wght@500&family=Devonshire&family=Montez&family=Montserrat:wght@500;800&family=Overlock:wght@400;700&family=Short+Stack&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>La palette du goût</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="header__heading">ohmyfood</h1>
+    </header>
+    <main class="page">
+      <h2 class="page__heading">La palette du goût</h2>
+      <article class="menu menu--4">
+        <i></i>
+        <h3 class="menu__heading">La palette du goût</h3>
+        <label for="Entrées">Esquisse</label>
+        <div class="menu__text">
+          <p>Fricassée d'escargot au piment d'espelette<span class="price">60€</span></p>
+          <p>Oeuf au plat assaisonné à la truffe sur lit de caviar<span class="price">55€</span></p>
+          <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="price">65€</span></p>
+        </div>
+        <label for="Plats">Oeuvre de maître</label>
+        <div class="menu__text">
+          <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<span class="price">70€</span></p>
+          <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="price">85€</span></p>
+          <p>Filet de Turbot aux légumes<span class="price">125€</span></p>
+        </div>
+        <label for="Desserts">Au sommet de l'art</label>
+        <div class="menu__text">
+          <p>Paris-Brest revisité<span class="price">55€</span></p></p>
+          <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar<span class="price">65€</span></p></p>
+          <p>Mousse au chocolat au piment d'espelette et à la truffe noire<span class="price">60€</span></p></p>
+        </div>
+      </article>
+    </main> 
+    <footer class="footer">
+      <a href="mentions_legales.html" class="footer__btn footer__btn--mentions">Mentions légales</a>
+      <a href="mailto:ohmyfood@contact.com" class="footer__btn footer__btn--contact">Contactez-nous</a>
+    </footer>
+  </body>
 </html>
