--- a/delice.html
+++ b/delice.html
@@ -3,8 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Courgette&family=Dancing+Script:wght@500&family=Devonshire&family=Montez&family=Montserrat:wght@500;800&family=Overlock:wght@400;700&family=Short+Stack&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>Le délice des papilles</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="header__heading">ohmyfood</h1>
+    </header>
+    <main class="page">
+      <h2 class="page__heading">Le délice des papilles</h2>
+      <article class="menu menu--3">
+        <i></i>
+        <h3 class="menu__heading">Le délice des papilles</h3>
+        <label for="Entrées">Pour bien commencer</label>
+        <div class="menu__text">
+          <p>Tartare de thon assaisonné au yuzu<span class="price">55€</span></p>
+          <p>Bouchée de homard croustillant et sa farandole de petits légumes<span class="price">89€</span></p>
+          <p>Velouté de cèpes aux truffes<span class="price">56€</span></p>
+        </div>
+        <label for="Plats">Pour bien continuer</label>
+        <div class="menu__text">
+          <p>Poulet rôti aux herbes de provence et sa crème de truffe<span class="price">110€</span></p>
+          <p>Langouste rôtie et ses légumes de saison<span class="price">225€</span></p>
+          <p>Côte de boeuf angus et sa purée de panais<span class="price">115€</span></p>
+        </div>
+        <label for="Desserts">Pour bien terminer</label>
+        <div class="menu__text">
+          <p>Farandole de desserts du chef</p>
+          <p>Crème brulée revisitée</p>
+          <p>Tiramisu à la noisette</p>
+        </div>
+      </article>
+    </main> 
+    <footer class="footer">
+      <a href="mentions_legales.html" class="footer__btn footer__btn--mentions">Mentions légales</a>
+      <a href="mailto:ohmyfood@contact.com" class="footer__btn footer__btn--contact">Contactez-nous</a>
+    </footer>
+  </body>
 </html>
