--- a/note.html
+++ b/note.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Courgette&family=Dancing+Script:wght@500&family=Devonshire&family=Montez&family=Montserrat:wght@500;800&family=Overlock:wght@400;700&family=Short+Stack&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>La note enchantée</title>
   </head>
   <body>
-    <header class="header">
+   <header class="header">
       <h1 class="header__heading">ohmyfood</h1>
     </header>
-    <section class="page">
+    <main class="page">
       <h2 class="page__heading">La note enchantée</h2>
       <article class="menu menu--1">
         <i></i>
@@ -34,11 +35,12 @@
           <p>Baba au rhum revisité avec son coulis de citron</p>
           <p>Tarte au citron meringuée destructurée</p>
         </div>
+        <i></i><h4>La note enchantée</h4>
       </article>
-    </section> 
+    </main> 
     <footer class="footer">
       <a href="mentions_legales.html" class="footer__btn footer__btn--mentions">Mentions légales</a>
       <a href="mailto:ohmyfood@contact.com" class="footer__btn footer__btn--contact">Contactez-nous</a>
-    </footer>
+    </footer> 
   </body>
 </html>
