Mise en place animation

--- a/delice.html
+++ b/delice.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Courgette&family=Dancing+Script:wght@500&family=Devonshire&family=Montez&family=Montserrat:wght@500;800&family=Overlock:wght@400;700&family=Short+Stack&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/68211b4b2b.js" crossorigin="anonymous"></script>
     <title>Le délice des papilles</title>
   </head>
   <body>
