--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Courgette&family=Dancing+Script:wght@500&family=Devonshire&family=Montez&family=Montserrat:wght@500;800&family=Overlock:wght@400;700&family=Short+Stack&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/68211b4b2b.js" crossorigin="anonymous"></script>
     <title>Accueil Ohmyfood !</title>
   </head>
 
@@ -15,21 +16,46 @@
 
     <nav class="grid">
       <a href="./note.html" class="card card--1">
-        <i></i>
-        <div>La note enchantée</div>
-        <p>MENU</p>
+        <div class="card__content card__content--in">
+          <i class="fas fa-music"></i>
+          <div class="title">La note enchantée</div>
+          <p>MENU</p>
+        </div>
+        <div class="card__content card__content--out">
+          <i class="fas fa-music"></i>
+          <div class="title">La note enchantée</div>
+          <p>MENU</p>
+        </div>
       </a>
       <a href="./chic.html" class="card card--2">
-        <div>Le chic à la Française</div>
-        <p>Menu</p>
+        <div class="card__content card__content--in">
+          <div class="title">Le chic à la Française</div>
+          <p>Menu</p>
+        </div>
+        <div class="card__content card__content--out">
+          <div class="title">Le chic à la Française</div>
+          <p>Menu</p>
+        </div>
       </a>
       <a href="./delice.html" class="card card--3">
-        <div>Le délice des papilles</div>
-        <p>Menu</p>
+        <div class="card__content card__content--in">
+          <div class="title">Le délice des papilles</div>
+          <p>Menu</p>
+        </div>
+        <div class="card__content card__content--out">
+          <div class="title">Le délice des papilles</div>
+          <p>Menu</p>
+        </div>
       </a>
       <a href="./palette.html" class="card card--4">
-        <div>La palette du goût</div>
-        <p>Menu</p>
+        <div class="card__content card__content--in">
+          <div class="title">La palette du goût</div>
+          <p>Menu</p>
+        </div>
+        <div class="card__content card__content--out">
+          <div class="title">La palette du goût</div>
+          <p>Menu</p>
+        </div>
       </a>
     </nav>
     <section class="next">
