--- a/note.html
+++ b/note.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Courgette&family=Dancing+Script:wght@500&family=Devonshire&family=Montez&family=Montserrat:wght@500;800&family=Overlock:wght@400;700&family=Short+Stack&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/68211b4b2b.js" crossorigin="anonymous"></script>
     <title>La note enchantée</title>
   </head>
   <body>
@@ -14,7 +15,7 @@
     <main class="page">
       <h2 class="page__heading">La note enchantée</h2>
       <article class="menu menu--1">
-        <i></i>
+        <div class="fa--top"><i class="fas fa-music"></i></div>
         <h3 class="menu__heading">La note enchantée</h3>
         <label for="Entrées">Prélude</label>
         <div class="menu__text">
@@ -35,7 +36,8 @@
           <p>Baba au rhum revisité avec son coulis de citron</p>
           <p>Tarte au citron meringuée destructurée</p>
         </div>
-        <i></i><h4>La note enchantée</h4>
+        <div class="fa--bottom"><i class="fas fa-music"></i></div>
+        <h4>La note enchantée</h4>
       </article>
     </main> 
     <footer class="footer">
