--- a/chic.html
+++ b/chic.html
@@ -16,19 +16,19 @@
       <h2 class="page__heading">Le chic à la française</h2>
       <article class="menu menu--2">
         <h3 class="menu__heading">Le chic à la française</h3>
-        <label for="Entrées">Pour se mettre en appétit</label>
+        <label for="Entrées"><span class="underligne">Pour se mettre en appétit</span></label>
         <div class="menu__text">
           <p>Tartare de poulpe acidulé aux zests d'orange<span class="price">79€</span></p>
           <p>Velouté de légumes d'antan<span class="price">57€</span></p>
           <p>Soupe à l'oignon revisitée<span class="price">57€</span></p>
         </div>
-        <label for="Plats">Plaisir des papilles</label>
+        <label for="Plats"><span class="underligne">Plaisir des papilles</span></label>
         <div class="menu__text">
           <p>Coquille Saint-Jacques accompagnées d'une purée de panais<span class="price">95€</span></p>
           <p>Magret de canard et parmentier de pommes de terres<span class="price">88€</span></p>
           <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes<span class="price">175€</span></p>
         </div>
-        <label for="Desserts">Gourmandises sucrées</label>
+        <label for="Desserts"><span class="underligne">Gourmandises sucrées</span></label>
         <div class="menu__text">
           <p>Pétales de violettes glacés et purée de noisettes</p>
           <p>Fondant au chocolat revisité</p>
