--- a/note.html
+++ b/note.html
@@ -17,20 +17,20 @@
       <article class="menu menu--1">
         <div class="fa--top"><i class="fas fa-music"></i></div>
         <h3 class="menu__heading">La note enchantée</h3>
-        <label for="Entrées">Prélude</label>
+        <label for="Entrées"><span class="underligne">Prélude</span></label>
         <div class="menu__text">
           <p>Ravioles de foie gras accompagnés de leur crème à la truffe<span class="price">98€</span></p>
           <p>Caviar osciètre sur blini à la farine de blé noir<span class="price">115€</span></p>
           <p>Homard et espuma de potiron mariné aux zests d'orange<span class="price">89€</span></p>
           <p>Foie gras de canard cuit entier, confiture de figue et pain toasté<span class="price">105€</span></p>
         </div>
-        <label for="Plats">Point d'orgue</label>
+        <label for="Plats"><span class="underligne">Point d'orgue</span></label>
         <div class="menu__text">
           <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave<span class="price">102€</span></p>
           <p>Languoustine poêlée, purée de patate douce<span class="price">205€</span></p>
           <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron<span class="price">169€</span></p>
         </div>
-        <label for="Desserts">Mouvement final</label>
+        <label for="Desserts"><span class="underligne">Mouvement final</span></label>
         <div class="menu__text">
           <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
           <p>Baba au rhum revisité avec son coulis de citron</p>
