--- a/delice.html
+++ b/delice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,19 +17,19 @@
       <article class="menu menu--3">
         <i></i>
         <h3 class="menu__heading">Le délice des papilles</h3>
-        <label for="Entrées"><span class="underligne">Pour bien commencer</span></label>
+        <b><span class="underline underline--1">Pour bien commencer</span></b>
         <div class="menu__text">
           <p>Tartare de thon assaisonné au yuzu<span class="price">55€</span></p>
           <p>Bouchée de homard croustillant et sa farandole de petits légumes<span class="price">89€</span></p>
           <p>Velouté de cèpes aux truffes<span class="price">56€</span></p>
         </div>
-        <label for="Plats"><span class="underligne">Pour bien continuer</span></label>
+        <b><span class="underline underline--2">Pour bien continuer</span></b>
         <div class="menu__text">
           <p>Poulet rôti aux herbes de provence et sa crème de truffe<span class="price">110€</span></p>
           <p>Langouste rôtie et ses légumes de saison<span class="price">225€</span></p>
           <p>Côte de boeuf angus et sa purée de panais<span class="price">115€</span></p>
         </div>
-        <label for="Desserts"><span class="underligne">Pour bien terminer</span></label>
+        <b><span class="underline underline--3">Pour bien terminer</span></b>
         <div class="menu__text">
           <p>Farandole de desserts du chef</p>
           <p>Crème brulée revisitée</p>
