--- a/palette.html
+++ b/palette.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,19 +17,19 @@
       <article class="menu menu--4">
         <i></i>
         <h3 class="menu__heading">La palette du goût</h3>
-        <label for="Entrées"><span class="underligne">Esquisse</span></label>
+        <b><span class="underline underline--1">Esquisse</span></b>
         <div class="menu__text">
           <p>Fricassée d'escargot au piment d'espelette<span class="price">60€</span></p>
           <p>Oeuf au plat assaisonné à la truffe sur lit de caviar<span class="price">55€</span></p>
           <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="price">65€</span></p>
         </div>
-        <label for="Plats"><span class="underligne">Oeuvre de maître</span></label>
+        <b><span class="underline underline--2">Oeuvre de maître</span></b>
         <div class="menu__text">
           <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<span class="price">70€</span></p>
           <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="price">85€</span></p>
           <p>Filet de Turbot aux légumes<span class="price">125€</span></p>
         </div>
-        <label for="Desserts"><span class="underligne">Au sommet de l'art</span></label>
+        <b><span class="underline underline--3">Au sommet de l'art</span></b>
         <div class="menu__text">
           <p>Paris-Brest revisité<span class="price">55€</span></p></p>
           <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar<span class="price">65€</span></p></p>
