--- a/note.html
+++ b/note.html
@@ -36,8 +36,10 @@
           <p>Baba au rhum revisité avec son coulis de citron</p>
           <p>Tarte au citron meringuée destructurée</p>
         </div>
-        <div class="fa--bottom"><i class="fas fa-music"></i></div>
-        <h4>La note enchantée</h4>
+        <div class="menu__foot">
+          <div class="fa--bottom"><i class="fas fa-music"></i></div>
+          <h4>La note enchantée</h4>
+        </div>
       </article>
     </main> 
     <footer class="footer">
