--- a/delice.html
+++ b/delice.html
@@ -15,25 +15,26 @@
     <main class="page">
       <h2 class="page__heading">Le délice des papilles</h2>
       <article class="menu menu--3">
-        <i></i>
         <h3 class="menu__heading">Le délice des papilles</h3>
-        <b><span class="underline underline--1">Pour bien commencer</span></b>
-        <div class="menu__text">
-          <p>Tartare de thon assaisonné au yuzu<span class="price">55€</span></p>
-          <p>Bouchée de homard croustillant et sa farandole de petits légumes<span class="price">89€</span></p>
-          <p>Velouté de cèpes aux truffes<span class="price">56€</span></p>
-        </div>
-        <b><span class="underline underline--2">Pour bien continuer</span></b>
-        <div class="menu__text">
-          <p>Poulet rôti aux herbes de provence et sa crème de truffe<span class="price">110€</span></p>
-          <p>Langouste rôtie et ses légumes de saison<span class="price">225€</span></p>
-          <p>Côte de boeuf angus et sa purée de panais<span class="price">115€</span></p>
-        </div>
-        <b><span class="underline underline--3">Pour bien terminer</span></b>
-        <div class="menu__text">
-          <p>Farandole de desserts du chef</p>
-          <p>Crème brulée revisitée</p>
-          <p>Tiramisu à la noisette</p>
+        <div class="menu__content">
+          <b><span class="underline underline--1">Pour bien commencer</span></b>
+          <div class="menu__text">
+            <p>Tartare de thon assaisonné au yuzu<span class="price">55€</span></p>
+            <p>Bouchée de homard croustillant et sa farandole de petits légumes<span class="price">89€</span></p>
+            <p>Velouté de cèpes aux truffes<span class="price">56€</span></p>
+          </div>
+          <b><span class="underline underline--2">Pour bien continuer</span></b>
+          <div class="menu__text">
+            <p>Poulet rôti aux herbes de provence et sa crème de truffe<span class="price">110€</span></p>
+            <p>Langouste rôtie et ses légumes de saison<span class="price">225€</span></p>
+            <p>Côte de boeuf angus et sa purée de panais<span class="price">115€</span></p>
+          </div>
+          <b><span class="underline underline--3">Pour bien terminer</span></b>
+          <div class="menu__text">
+            <p>Farandole de desserts du chef</p>
+            <p>Crème brulée revisitée</p>
+            <p>Tiramisu à la noisette</p>
+          </div>
         </div>
       </article>
     </main> 
