--- a/note.html
+++ b/note.html
@@ -17,28 +17,30 @@
       <article class="menu menu--1">
         <div class="fa--top"><i class="fas fa-music"></i></div>
         <h3 class="menu__heading">La note enchantée</h3>
-        <b><span class="underline underline--1">Prélude</span></b>
-        <div class="menu__text">
-          <p>Ravioles de foie gras accompagnés de leur crème à la truffe<span class="price">98€</span></p>
-          <p>Caviar osciètre sur blini à la farine de blé noir<span class="price">115€</span></p>
-          <p>Homard et espuma de potiron mariné aux zests d'orange<span class="price">89€</span></p>
-          <p>Foie gras de canard cuit entier, confiture de figue et pain toasté<span class="price">105€</span></p>
-        </div>
-        <b><span class="underline underline--2">Point d'orgue</span></b>
-        <div class="menu__text">
-          <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave<span class="price">102€</span></p>
-          <p>Languoustine poêlée, purée de patate douce<span class="price">205€</span></p>
-          <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron<span class="price">169€</span></p>
-        </div>
-        <b><span class="underline underline--3">Mouvement final</span></b>
-        <div class="menu__text">
-          <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
-          <p>Baba au rhum revisité avec son coulis de citron</p>
-          <p>Tarte au citron meringuée destructurée</p>
-        </div>
-        <div class="menu__foot">
-          <div class="fa--bottom"><i class="fas fa-music"></i></div>
-          <h4>La note enchantée</h4>
+        <div class="menu__content">
+          <b><span class="underline underline--1">Prélude</span></b>
+          <div class="menu__text">
+            <p>Ravioles de foie gras accompagnés de leur crème à la truffe<span class="price">98€</span></p>
+            <p>Caviar osciètre sur blini à la farine de blé noir<span class="price">115€</span></p>
+            <p>Homard et espuma de potiron mariné aux zests d'orange<span class="price">89€</span></p>
+            <p>Foie gras de canard cuit entier, confiture de figue et pain toasté<span class="price">105€</span></p>
+          </div>
+          <b><span class="underline underline--2">Point d'orgue</span></b>
+          <div class="menu__text">
+            <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave<span class="price">102€</span></p>
+            <p>Languoustine poêlée, purée de patate douce<span class="price">205€</span></p>
+            <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron<span class="price">169€</span></p>
+          </div>
+          <b><span class="underline underline--3">Mouvement final</span></b>
+          <div class="menu__text">
+            <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+            <p>Baba au rhum revisité avec son coulis de citron</p>
+            <p>Tarte au citron meringuée destructurée</p>
+          </div>
+          <div class="menu__foot">
+            <div class="fa--bottom"><i class="fas fa-music"></i></div>
+            <h4>La note enchantée</h4>
+          </div>
         </div>
       </article>
     </main> 
