--- a/palette.html
+++ b/palette.html
@@ -15,25 +15,26 @@
     <main class="page">
       <h2 class="page__heading">La palette du goût</h2>
       <article class="menu menu--4">
-        <i></i>
         <h3 class="menu__heading">La palette du goût</h3>
-        <b><span class="underline underline--1">Esquisse</span></b>
-        <div class="menu__text">
-          <p>Fricassée d'escargot au piment d'espelette<span class="price">60€</span></p>
-          <p>Oeuf au plat assaisonné à la truffe sur lit de caviar<span class="price">55€</span></p>
-          <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="price">65€</span></p>
-        </div>
-        <b><span class="underline underline--2">Oeuvre de maître</span></b>
-        <div class="menu__text">
-          <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<span class="price">70€</span></p>
-          <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="price">85€</span></p>
-          <p>Filet de Turbot aux légumes<span class="price">125€</span></p>
-        </div>
-        <b><span class="underline underline--3">Au sommet de l'art</span></b>
-        <div class="menu__text">
-          <p>Paris-Brest revisité<span class="price">55€</span></p></p>
-          <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar<span class="price">65€</span></p></p>
-          <p>Mousse au chocolat au piment d'espelette et à la truffe noire<span class="price">60€</span></p></p>
+        <div class="menu__content">
+          <b><span class="underline underline--1">Esquisse</span></b>
+          <div class="menu__text">
+            <p>Fricassée d'escargot au piment d'espelette<span class="price">60€</span></p>
+            <p>Oeuf au plat assaisonné à la truffe sur lit de caviar<span class="price">55€</span></p>
+            <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="price">65€</span></p>
+          </div>
+          <b><span class="underline underline--2">Oeuvre de maître</span></b>
+          <div class="menu__text">
+            <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<span class="price">70€</span></p>
+            <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="price">85€</span></p>
+            <p>Filet de Turbot aux légumes<span class="price">125€</span></p>
+          </div>
+          <b><span class="underline underline--3">Au sommet de l'art</span></b>
+          <div class="menu__text">
+            <p>Paris-Brest revisité<span class="price">55€</span></p></p>
+            <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar<span class="price">65€</span></p></p>
+            <p>Mousse au chocolat au piment d'espelette et à la truffe noire<span class="price">60€</span></p></p>
+          </div>
         </div>
       </article>
     </main> 
