--- a/chic.html
+++ b/chic.html
@@ -19,15 +19,27 @@
         <div class="menu__content">
           <b><span class="underline underline--1">Pour se mettre en appétit</span></b>
           <div class="menu__text">
-            <p>Tartare de poulpe acidulé aux zests d'orange<span class="price">79€</span></p>
-            <p>Velouté de légumes d'antan<span class="price">57€</span></p>
-            <p>Soupe à l'oignon revisitée<span class="price">57€</span></p>
+            <div class="text-line">
+              <p>Tartare de poulpe acidulé aux zests d'orange</p><div class="price">79€</div>
+            </div>
+            <div class="text-line">
+              <p>Velouté de légumes d'antan</p><div class="price">57€</div>
+            </div>
+            <div class="text-line">
+              <p>Soupe à l'oignon revisitée</p><div class="price">57€</div>
+            </div>
           </div>
           <b><span class="underline underline--2">Plaisir des papilles</span></b>
           <div class="menu__text">
-            <p>Coquille Saint-Jacques accompagnées d'une purée de panais<span class="price">95€</span></p>
-            <p>Magret de canard et parmentier de pommes de terres<span class="price">88€</span></p>
-            <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes<span class="price">175€</span></p>
+            <div class="text-line">
+              <p>Coquille Saint-Jacques accompagnées d'une purée de panais</p><div class="price">95€</div>
+            </div>
+            <div class="text-line">
+              <p>Magret de canard et parmentier de pommes de terres</p><div class="price">88€</div>
+            </div>
+            <div class="text-line">
+              <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p><div class="price">175€</div>
+            </div>
           </div>
           <b><span class="underline underline--3">Gourmandises sucrées</span></b>
           <div class="menu__text">
