--- a/delice.html
+++ b/delice.html
@@ -19,15 +19,27 @@
         <div class="menu__content">
           <b><span class="underline underline--1">Pour bien commencer</span></b>
           <div class="menu__text">
-            <p>Tartare de thon assaisonné au yuzu<span class="price">55€</span></p>
-            <p>Bouchée de homard croustillant et sa farandole de petits légumes<span class="price">89€</span></p>
-            <p>Velouté de cèpes aux truffes<span class="price">56€</span></p>
+            <div class="text-line">
+              <p>Tartare de thon assaisonné au yuzu</p><div class="price">55€</div>
+            </div>
+            <div class="text-line">
+              <p>Bouchée de homard croustillant et sa farandole de petits légumes</p><div class="price">89€</div>
+            </div>
+            <div class="text-line">
+              <p>Velouté de cèpes aux truffes</p><div class="price">56€</div>
+            </div>
           </div>
           <b><span class="underline underline--2">Pour bien continuer</span></b>
           <div class="menu__text">
-            <p>Poulet rôti aux herbes de provence et sa crème de truffe<span class="price">110€</span></p>
-            <p>Langouste rôtie et ses légumes de saison<span class="price">225€</span></p>
-            <p>Côte de boeuf angus et sa purée de panais<span class="price">115€</span></p>
+            <div class="text-line">
+              <p>Poulet rôti aux herbes de provence et sa crème de truffe</p><div class="price">110€</div>
+            </div>
+            <div class="text-line">
+              <p>Langouste rôtie et ses légumes de saison</p><div class="price">225€</div>
+            </div>
+            <div class="text-line">
+              <p>Côte de boeuf angus et sa purée de panais</p><div class="price">115€</div>
+            </div>
           </div>
           <b><span class="underline underline--3">Pour bien terminer</span></b>
           <div class="menu__text">
