--- a/palette.html
+++ b/palette.html
@@ -14,26 +14,44 @@
     </header>
     <main class="page">
       <h2 class="page__heading">La palette du goût</h2>
-      <article class="menu menu--4">
+      <div class="menu menu--4">
         <h3 class="menu__heading">La palette du goût</h3>
         <div class="menu__content">
           <b><span class="underline underline--1">Esquisse</span></b>
           <div class="menu__text">
-            <p>Fricassée d'escargot au piment d'espelette<span class="price">60€</span></p>
-            <p>Oeuf au plat assaisonné à la truffe sur lit de caviar<span class="price">55€</span></p>
-            <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="price">65€</span></p>
+            <div class="text-line">
+              <p>Fricassée d'escargot au piment d'espelette</p><div class="price">60€</div>
+            </div>
+            <div class="text-line">
+              <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p><div class="price">55€</div>
+            </div>
+            <div class="text-line">
+              <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p><div class="price">65€</div>
+            </div>
           </div>
           <b><span class="underline underline--2">Oeuvre de maître</span></b>
           <div class="menu__text">
-            <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<span class="price">70€</span></p>
-            <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="price">85€</span></p>
-            <p>Filet de Turbot aux légumes<span class="price">125€</span></p>
+            <div class="text-line">
+              <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p><div class="price">70€</div>
+            </div>
+            <div class="text-line">
+              <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p><div class="price">85€</div>
+            </div>
+            <div class="text-line">
+              <p>Filet de Turbot aux légumes</p><div class="price">125€</div>
+            </div>
           </div>
           <b><span class="underline underline--3">Au sommet de l'art</span></b>
           <div class="menu__text">
-            <p>Paris-Brest revisité<span class="price">55€</span></p></p>
-            <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar<span class="price">65€</span></p></p>
-            <p>Mousse au chocolat au piment d'espelette et à la truffe noire<span class="price">60€</span></p></p>
+            <div class="text-line">
+              <p>Paris-Brest revisité</p><div class="price">55€</div>
+            </div>
+            <div class="text-line">
+              <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar</p><div class="price">65€</div>
+            </div>
+            <div class="text-line">
+              <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p><div class="price">60€</div>
+            </div>
           </div>
         </div>
       </article>
