--- a/note.html
+++ b/note.html
@@ -18,18 +18,32 @@
         <div class="fa--top"><i class="fas fa-music"></i></div>
         <h3 class="menu__heading">La note enchantée</h3>
         <div class="menu__content">
-          <b><span class="underline underline--1">Prélude</span></b>
+          <hr><b><span class="underline underline--1">Prélude</span></b>
           <div class="menu__text">
-            <p>Ravioles de foie gras accompagnés de leur crème à la truffe<span class="price">98€</span></p>
-            <p>Caviar osciètre sur blini à la farine de blé noir<span class="price">115€</span></p>
-            <p>Homard et espuma de potiron mariné aux zests d'orange<span class="price">89€</span></p>
-            <p>Foie gras de canard cuit entier, confiture de figue et pain toasté<span class="price">105€</span></p>
+            <div class="text-line">
+              <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p><div class="price">98€</div>
+            </div>
+            <div class="text-line">
+              <p>Caviar osciètre sur blini à la farine de blé noir</p><div class="price">115€</div>
+            </div>
+            <div class="text-line">
+              <p>Homard et espuma de potiron mariné aux zests d'orange</p><div class="price">89€</div>
+            </div>
+            <div class="text-line">
+              <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p><div class="price">105€</div>
+            </div>
           </div>
           <b><span class="underline underline--2">Point d'orgue</span></b>
           <div class="menu__text">
-            <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave<span class="price">102€</span></p>
-            <p>Languoustine poêlée, purée de patate douce<span class="price">205€</span></p>
-            <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron<span class="price">169€</span></p>
+            <div class="text-line">
+              <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p><div class="price">102€</div>
+            </div>
+            <div class="text-line">
+              <p>Languoustine poêlée, purée de patate douce</p><div class="price">205€</div>
+            </div>
+            <div class="text-line">
+              <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p><div class="price">169€</div>
+            </div>
           </div>
           <b><span class="underline underline--3">Mouvement final</span></b>
           <div class="menu__text">
