Dégradé ornements menu dédié

--- a/delice.html
+++ b/delice.html
@@ -17,7 +17,7 @@
       <article class="menu menu--3">
         <h3 class="menu__heading">Le délice des papilles</h3>
         <div class="menu__content">
-          <b><span class="underline underline--1">Pour bien commencer</span></b>
+          <b class="break break--1"><span class="underline underline--1">Pour bien commencer</span></b>
           <div class="menu__text">
             <div class="text-line">
               <p>Tartare de thon assaisonné au yuzu</p><div class="price">55€</div>
@@ -29,7 +29,7 @@
               <p>Velouté de cèpes aux truffes</p><div class="price">56€</div>
             </div>
           </div>
-          <b><span class="underline underline--2">Pour bien continuer</span></b>
+          <b class="break break--2"><span class="underline underline--2">Pour bien continuer</span></b>
           <div class="menu__text">
             <div class="text-line">
               <p>Poulet rôti aux herbes de provence et sa crème de truffe</p><div class="price">110€</div>
@@ -41,7 +41,7 @@
               <p>Côte de boeuf angus et sa purée de panais</p><div class="price">115€</div>
             </div>
           </div>
-          <b><span class="underline underline--3">Pour bien terminer</span></b>
+          <b class="break break--3"><span class="underline underline--3">Pour bien terminer</span></b>
           <div class="menu__text">
             <p>Farandole de desserts du chef</p>
             <p>Crème brulée revisitée</p>
