--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </nav>
     <section class="next">
       <h2 class="next__heading">Prochainement
-        <div class="next__dot next__dot--1">.</div>
-        <div class="next__dot next__dot--2">.</div>
-        <div class="next__dot next__dot--3">.</div>
+        <span class="next__dot next__dot--1">.</span>
+        <span class="next__dot next__dot--2">.</span>
+        <span class="next__dot next__dot--3">.</span>
       </h2>
     </section>
     <footer class="footer">
