--- a/note.html
+++ b/note.html
@@ -18,7 +18,7 @@
         <div class="fa--top"><i class="fas fa-music"></i></div>
         <h3 class="menu__heading">La note enchantée</h3>
         <div class="menu__content">
-          <hr><b><span class="underline underline--1">Prélude</span></b>
+          <b class="break break--1"><span class="underline underline--1">Prélude</span></b>
           <div class="menu__text">
             <div class="text-line">
               <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p><div class="price">98€</div>
@@ -33,7 +33,7 @@
               <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p><div class="price">105€</div>
             </div>
           </div>
-          <b><span class="underline underline--2">Point d'orgue</span></b>
+          <b class="break break--2"><span class="underline underline--2">Point d'orgue</span></b>
           <div class="menu__text">
             <div class="text-line">
               <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p><div class="price">102€</div>
@@ -45,7 +45,7 @@
               <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p><div class="price">169€</div>
             </div>
           </div>
-          <b><span class="underline underline--3">Mouvement final</span></b>
+          <b class="break break--3"><span class="underline underline--3">Mouvement final</span></b>
           <div class="menu__text">
             <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
             <p>Baba au rhum revisité avec son coulis de citron</p>
@@ -55,7 +55,7 @@
             <div class="fa--bottom"><i class="fas fa-music"></i></div>
             <h4>La note enchantée</h4>
           </div>
-        </div>
+        </>
       </article>
     </main> 
     <footer class="footer">
