--- a/palette.html
+++ b/palette.html
@@ -17,7 +17,7 @@
       <div class="menu menu--4">
         <h3 class="menu__heading">La palette du goût</h3>
         <div class="menu__content">
-          <b><span class="underline underline--1">Esquisse</span></b>
+          <b class="break break--1"><span class="underline underline--1">Esquisse</span></b>
           <div class="menu__text">
             <div class="text-line">
               <p>Fricassée d'escargot au piment d'espelette</p><div class="price">60€</div>
@@ -29,7 +29,7 @@
               <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p><div class="price">65€</div>
             </div>
           </div>
-          <b><span class="underline underline--2">Oeuvre de maître</span></b>
+          <b class="break break--2"><span class="underline underline--2">Oeuvre de maître</span></b>
           <div class="menu__text">
             <div class="text-line">
               <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p><div class="price">70€</div>
@@ -41,7 +41,7 @@
               <p>Filet de Turbot aux légumes</p><div class="price">125€</div>
             </div>
           </div>
-          <b><span class="underline underline--3">Au sommet de l'art</span></b>
+          <b class="break break--3"><span class="underline underline--3">Au sommet de l'art</span></b>
           <div class="menu__text">
             <div class="text-line">
               <p>Paris-Brest revisité</p><div class="price">55€</div>
