Correction bug soulignement

--- a/chic.html
+++ b/chic.html
@@ -17,7 +17,7 @@
       <article class="menu menu--2">
         <h3 class="menu__heading">Le chic à la française</h3>
         <div class="menu__content">
-          <b class="break break--1"><span class="underline underline--1">Pour se mettre en appétit</span></b>
+          <div class="break break--1"><div><b class="underline underline--1">Pour se mettre en appétit</b></div></div>
           <div class="menu__text">
             <div class="text-line">
               <p>Tartare de poulpe acidulé aux zests d'orange</p><div class="price">79€</div>
@@ -29,7 +29,7 @@
               <p>Soupe à l'oignon revisitée</p><div class="price">57€</div>
             </div>
           </div>
-          <b class="break break--2"><span class="underline underline--2">Plaisir des papilles</span></b>
+          <div class="break break--2"><div><b class="underline underline--2">Plaisir des papilles</b></div></div>
           <div class="menu__text">
             <div class="text-line">
               <p>Coquille Saint-Jacques accompagnées d'une purée de panais</p><div class="price">95€</div>
@@ -41,7 +41,7 @@
               <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p><div class="price">175€</div>
             </div>
           </div>
-          <b class="break break--3"><span class="underline underline--3">Gourmandises sucrées</span></b>
+          <div class="break break--3"><div><b class="underline underline--3">Gourmandises sucrées</b></div></div>
           <div class="menu__text">
             <p>Pétales de violettes glacés et purée de noisettes</p>
             <p>Fondant au chocolat revisité</p>
