--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
       <a href="./note.html" class="card card--1">
         <div class="card__content">
           <i class="fas fa-music"></i>
-          <div class="title">La note enchantée</div>
+          <div class="card__heading">La note enchantée</div>
           <p>MENU</p>
         </div>
       </a>
       <a href="./chic.html" class="card card--2">
         <div class="card__content">
-          <div class="title">Le chic à la Française</div>
+          <div class="card__heading">Le chic à la Française</div>
           <p>Menu</p>
         </div>
       </a>
       <a href="./delice.html" class="card card--3">
         <div class="card__content">
-          <div class="title">Le délice des papilles</div>
+          <div class="card__heading">Le délice des papilles</div>
           <p>Menu</p>
         </div>
       </a>
       <a href="./palette.html" class="card card--4">
         <div class="card__content">
-          <div class="title">La palette du goût</div>
+          <div class="card__heading">La palette du goût</div>
           <p>Menu</p>
         </div>
       </a>
