--- a/note.html
+++ b/note.html
@@ -10,7 +10,7 @@
   </head>
   <body>
    <header class="header">
-      <h1 class="header__heading">ohmyfood</h1>
+      <a href="/index.html"><h1 class="header__heading">ohmyfood</h1></a>
     </header>
     <main class="page">
       <h2 class="page__heading">La note enchantée</h2>
@@ -55,7 +55,7 @@
             <div class="fa--bottom"><i class="fas fa-music"></i></div>
             <h4>La note enchantée</h4>
           </div>
-        </>
+        </div>
       </article>
     </main> 
     <footer class="footer">
