--- a/palette.html
+++ b/palette.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__heading">ohmyfood</h1>
+      <a href="/index.html"><h1 class="header__heading">ohmyfood</h1></a>
     </header>
     <main class="page">
       <h2 class="page__heading">La palette du goût</h2>
-      <div class="menu menu--4">
+      <article class="menu menu--4">
         <h3 class="menu__heading">La palette du goût</h3>
         <div class="menu__content">
           <div class="break break--1"><div><b class="underline underline--1">Esquisse</b></div></div>
