Correction final retour accueil github

--- a/delice.html
+++ b/delice.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="/index.html"><h1 class="header__heading">ohmyfood</h1></a>
+      <a href="./index.html"><h1 class="header__heading">ohmyfood</h1></a>
     </header>
     <main class="page">
       <h2 class="page__heading">Le délice des papilles</h2>
